hphp/hack/test/typecheck/argument_unpacking/unpack_call3.php.exp
File "unpack_call3.php", line 7, characters 8-12:
Invalid argument (Typing[4110])
  File "unpack_call3.php", line 7, characters 8-12:
  Expected `Traversable<_>` (it is unpacked with `...`)
  File "unpack_call3.php", line 6, characters 11-18:
  But got `string`
